--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,20 +7,198 @@
 }
 html{
     height: 100vh;
-    width: 100vw;
+    width: 90vw;
 }
 #root{
     height: 100vh;
+   
 }
-.home-page{
+.upper{
     width: 100vw;
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    background-image: linear-gradient(90deg,rgb(146, 207, 241)50%, transparent 50%);
+    background-size: cover;
+	background-attachment: fixed;
 }
 
+/* Home Page */
+.head-container {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 100px;
+    margin-top: 200px;
+    
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-around;
+}
+.quote {
+	width: 600px;
+	transform: translateY(-50px);
+}
+.quote h5 {
+	margin-top: 20px;
+	color: #0009;
+	line-height: 20px;
+}
+.quote p {
+	font-size: 50px;
+	color: #2e2e2e;
+}
+
+.svg-image img{
+	width: 500px;
+	filter: drop-shadow(0 20px 10px rgba(0,0,0,0.2));
+}
+
+
+
+/*POPULAR SUBJECTS*/
+
+.title  {
+  margin-top: 0px; 
+   font-family: 'Open Sans', sans-serif;
+   font-size: 30px;
+   text-align: center;
+   color: #2E3D49;
+}
+.title span {
+    margin-top: 0px; 
+     font-family: 'Open Sans', sans-serif;
+     font-size: 30px;
+     text-align: center;
+     color: #2E3D49;
+  }
+.cbox {
+	position: relative;
+	width: 100%;
+	display: inline-flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.cbox .det {
+	width: 250px;
+	height: 80px;
+	margin: 10px;
+	background: #fff;
+	cursor: pointer;
+    position: relative;
+}
+.cbox .det a{
+	justify-content: space-around;
+	width: 250px;
+	padding: 28px;
+	border-radius: 10px;
+	border: 1px solid #FA4B37;
+	font-size: 15px;
+	color: #272529;
+	font-family: cursive;
+	text-decoration: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.cbox .det a:hover {
+	background: linear-gradient(to right, #FA4B37, #DF2771);
+	color: white;
+}
+.cbox .det a:hover img{
+	filter: brightness(100);
+}
+.cbox img {
+	width: 20px;
+	margin-right: 20px;
+}
+
+
+/*FEEDBACK*/
+.title2 {
+	position: relative;
+	margin-top: 100px;
+	margin-left: 50px;
+}
+.title2 span{
+	font-weight: 700;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 30px;
+	color: #2E3D49;
+}
+.title p{
+    margin-left: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 10px;
+}
+.title2 .shortdesc2 {
+	
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	color: #2E3D49;
+	margin-bottom: 10px;
+}
+.feedbox {
+	margin-top: 50px;
+	width: 100%;
+    height: 600px;
+	display: flex;
+	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.7)),url("./images/b4.jpg");
+	background-size: cover;
+	padding: 50px 80px;
+	background-attachment: fixed;
+}
+.feed {
+	width: 800px;
+	height: 550px;
+	position: relative;
+	border-radius: 10px;
+	justify-content: center;
+	box-shadow: inset 0 0 90px rgba(0,0,0,0.6),
+					0 0 80px rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.4);
+}
+.feed form {
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+}
+
+.feed form label {
+	position: absolute;
+	color: #f2f2f2;
+	font-size: 10px;
+	font-weight: 800;
+}
+.feed form input, .feed textarea {
+	padding: 15px;
+	border-radius: 5px;
+	box-shadow: inset 0 0 5px lightgray;
+	border: 1px solid rgba(0,0,0,0.2);
+	outline: none;
+	color: #2E3D49;
+	background: #fff9;
+	font-weight: 600;
+}
+.feed form input {
+	margin-bottom: 15px;
+	width: 50%;
+}
+.feed form .fname {
+	width: 25%;
+}
+.feed form textarea {
+	width: 100%;
+	height: 100px;
+}
+.feed #csubmit {
+	margin-top: 25px; 
+	background: linear-gradient(to right, #FA4B37, #DF2771);
+	border-radius: 5px;
+	border-style: none;
+	outline: none;
+	width: 100%;
+	padding: 15px 25px;
+	color: #fff;
+	font-size: 12px;
+	cursor: pointer;
+}
 
 /* Registration form ui css */
 
@@ -91,16 +269,6 @@ html{
      }     
  }
 
-
-.contact_info{
-    height: 50px;
-}
-.cont{
-    height: 100px;
-}
-.con-page{
-    background-color: whitesmoke;
-}
 
 @media only screen and (max-width:460){
     html{
@@ -198,18 +366,10 @@ html{
     }    
 }
 
-/* new login page css */
-body {
-	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5)),url("");
-	background-size: cover;
-	background-attachment: fixed;
-	display: flex;
-	justify-content: center;
-}
 .form-box
 {
 	width: 380px;
-
+    height: 550px;
 	position: relative;
 	margin: 6% auto;
 	background: #fff8;
@@ -381,4 +541,197 @@ span
 .connect span {
 	padding: 10px;
 	font-size: 15px;
+}
+
+/*FOOTER*/
+.footer {
+	color: #E5E8EF;
+	background: #000D;
+	padding: 50px 0; 
+}
+.footer .footer-container {
+	max-width: 1300px;
+	margin: auto;
+	padding: 0 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap-reverse;
+}
+.footer .social-media img{
+	width: 22px;
+}
+.footer .logo {
+	width: 180px;
+	color: #fff;
+}
+.footer .social-media a{
+	margin-right: 10px;
+	font-size: 22px;
+	text-decoration: none;
+}
+.footer .right-col h1{
+	font-size: 26px;
+}
+.footer .border{
+	width: 100px;
+	height: 4px;
+	background: linear-gradient(to right, #FA4B37, #DF2771);
+	margin: 2px;
+}
+.footer .newsletter-form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.footer input::placeholder {
+  color: white !important;
+}
+.footer .txtb {
+	flex: 1;
+	padding: 18px 40px;
+	font-size: 16px;
+	background: #343A40;
+	border: none;
+	font-weight: 700;
+	outline: none;
+	border-radius: 5px;
+	min-width: 260px;
+	margin-top: 20px;
+	color: white;
+}
+.footer .btn {
+	margin-top: 20px;
+	padding: 18px 40px;
+	font-size: 16px;
+	color: #f1f1f1;
+	background: linear-gradient(to right, #FA4B37, #DF2771);
+	border: none;
+	font-weight: 700;
+	outline: none;
+	border-radius: 5px;
+	margin-left: 20px;
+	cursor: pointer;
+	transition: opacity .3s linear;	
+}
+.footer .btn:hover {
+	opacity: .7;
+}
+
+/*PROPERTIES FOR MAKING WEBSITE RESPONSIVE*/
+@media screen and (max-width: 960px) {
+	.footer-container {
+		max-width: 600px;
+	}
+	.right-col {
+		width: 100%;
+		margin-bottom: 60px;
+	}
+	.left-col {
+		width: 100%;
+		text-align: center;
+	}
+	.social-media {
+		display: flex;
+		justify-content: center;
+	}
+	.logo {
+		transition: 1s;
+		margin-left: 30%;
+	}
+	nav ul, .srch, .get-started{
+		display: none;
+	}
+	.menu {
+		display: block;
+	}
+	nav {
+		padding-bottom: 20px;
+		border-bottom: 1px solid #0005;
+		/* position: fixed; */
+		/* top: 0; */
+	}
+	.quote p, .quote h5, .play {
+		justify-content: center;
+		text-align: center;
+	}
+	.quote p {
+		font-size: 30px;
+	}
+	.service-container .right-side img {
+		width: 90%;
+	}
+	.title {
+		margin-top: 0px;
+	}
+    .feedbox {
+        margin-top: 30px;
+        width: 100%;
+        height: 500px;
+        padding: 50px 30px;
+    }
+    .feed form {
+        margin: 0;
+        width: 90%;
+    }
+   
+}
+@media screen and (max-width: 700px) {
+	footer .btn{
+		margin: 0;
+		width: 100%;
+		margin-top: 20px;
+	}
+    .title2{
+        margin-left: 10px;
+        margin-top: 30px;
+    }
+    
+    .title2 span{
+        font-size: 25px;
+    }
+    .feedbox {
+        margin-top: 30px;
+        width: 100%;
+        height: 600px;
+        padding: 50px 30px;
+    }
+    .feed{
+        height: 90%;
+    }
+    .feed form {
+        margin: 0;
+        width: 100%;
+    }
+    .feedbox form input{
+        height: 7%;
+    }
+    .feedbox form textarea{
+        height: 17%;
+    }
+	.svg-image img {
+		width: 90%;
+		margin: 20px;
+		/* align-self: center; */
+	}
+    .title p{
+        margin-left: 50px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 10px;
+    }
+    .title2 .shortdesc2 {
+        
+        font-family: 'Open Sans', sans-serif;
+        font-size: 15px;
+        margin: auto;
+        color: #2E3D49;
+        margin-bottom: 5px;
+    }
+}
+
+@media screen and (max-width: 1000px) {	
+	.feedbox form input, .feedbox form .fname{
+		width: 100%;
+	}
 }
