--- a/client/src/App.css
+++ b/client/src/App.css
@@ -735,3 +735,65 @@ span
 		width: 100%;
 	}
 }
+/*Modal css start*/
+.overlay {
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(57, 57, 57, 0.9);
+  }
+  .overlay-noBg {
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+  }
+  
+  .container0 {
+    width: 600px;
+    /* height: 645px; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: scroll;
+  }
+  .container0::-webkit-scrollbar {
+    display: none;
+  }
+  @media screen and (max-width: 506px) {
+    .container0 {
+      position: static;
+      flex-basis: 100%;
+      transform: translate(0%, 0%);
+      /* transform: translate(-50%, -50%); */
+      height: 100%;
+      width: 100%;
+    }
+    .container {
+      flex-shrink: 1;
+    }
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 600px;
+    width: inherit;
+    min-height: inherit;
+    overflow-y: scroll;
+    border-radius: 10px;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    flex-shrink: 1;
+  }
+  .container::-webkit-scrollbar {
+    display: none;
+  }
+  /* Modal css ends*/
