--- a/client/src/App.css
+++ b/client/src/App.css
@@ -843,3 +843,171 @@ span
     display: none;
   }
   /* Modal css ends*/
+
+
+/* Headers */
+ #portfolio_section {
+	font-family: 'Open Sans', sans-serif;
+	color: #2E3D49;
+	position: relative;
+}
+.diffSection {
+	width: 100%;
+	/*position: relative;*/
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.diffSection .content {
+	margin: 10px;
+	text-align: center;
+	padding: 10px 100px;
+	font-size: 1.1em;
+}
+
+
+.extra {
+	width: 100%;
+}
+.extra p {
+	padding: 30px;
+	padding-bottom: 150px;
+	font-size: 50px;
+	text-align: center;
+	color: #fff;
+	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.7)),url("./images/b1.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	font-family: cursive;
+	z-index: -9;
+}
+/* article page */
+.container-article{
+	width: 90%;
+	margin: auto;
+	height: auto;
+}
+
+.about-content {
+	width: 100%;
+	margin-top: 20px;
+}
+.about-content .side-text {
+	width: 100%;
+	background: #fff;
+	box-shadow: 2px 0 100px rgba(0,0,0,0.3);
+	border-radius: 5px;
+	text-align: justify;
+	padding: 20px 10px;
+}
+
+.about-content .side-text h2 {
+	padding: 10px;
+}
+.about-content .side-text p {
+	padding: 10px;
+}
+
+
+
+
+  /* coding page */
+  .filters{
+   display: flex;
+   flex-wrap: wrap;
+  }
+  .search-name{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin: 10px;
+  }
+  .search-name h2{
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: 500;
+	font-size: 20px;
+}
+ .srch {
+    width: 30%;
+	padding: 2px;
+	display: flex; 
+	justify-content: center;
+	/* background: #0066ff; */
+	border: 1px solid;
+	border-radius: 20px;
+}
+.srch img {
+	width: 25px;
+	cursor: pointer;
+}
+.srch .search {
+	padding: 2px 10px; 
+	outline: none;
+	border: none;
+	background: transparent;
+}
+.container-inner{
+   width: 90%;
+   margin-top: 100px;
+   margin: auto;
+}
+.header-ques{
+
+}
+.table-list{
+    
+    width: 100%;
+    padding: 8px;
+	border-radius: 10px;
+	border: 1px solid #FA4B37;
+	font-size: 15px;
+	color: #272529;
+	font-family: cursive;
+    display: flex;
+    margin: 10px 0;
+    flex-direction: column;
+    justify-content: center;
+}
+.t1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.quesHeading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.quesId{
+    margin-right: 10px;
+}
+.quesLinks{
+   position: relative;   
+}
+.quesLinks span{
+    
+    width: 100%;
+    padding: 4px;
+    margin-right: 10px;
+	border-radius: 10px;
+	border: 1px solid #FA4B37;
+	font-size: 15px;
+	color: #272529;
+	font-family: cursive;
+    cursor: pointer;
+}
+
+.t2 span{
+    margin-right: 20px;
+    margin-top: 25px;
+    background: linear-gradient(to right, #FA4B37, #DF2771);
+    border-radius: 5px;
+    border-style: none;
+    outline: none;
+    width: 100%;
+    padding:5px 10px;
+    color: #fff;
+    font-size: 12px;
+}
