--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: "Crete Round', serif";
 }
+
 [data-required="true"]::after {
   content: " *";
   color: red;
@@ -361,11 +362,22 @@ html {
   }
 }
 
+
+/* login page */
+.bodyPage{
+	width: 100vw;
+	height: 100vh;
+	background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.5)),url("./images/backwallpaper.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	display: flex;
+	justify-content: center;
+}
 .form-box {
   width: 380px;
   height: 550px;
   position: relative;
-  margin: 6% auto;
+  margin: 3% auto;
   background: #fff8;
   padding: 5px;
   border-radius: 5px;
@@ -521,9 +533,12 @@ span {
   background: #fff3;
 }
 .connect:hover {
-  background: #fff8;
+  background: rgb(241, 239, 239);
 }
-
+.connect img {
+	padding: 5px;
+	width: 35px;
+}
 .connect span {
   padding: 10px;
   font-size: 15px;
@@ -703,7 +718,7 @@ span {
   .feedbox {
     margin-top: 30px;
     width: 100%;
-    height: 500px;
+    height: auto;
     padding: 50px 30px;
   }
   .feed form {
@@ -929,7 +944,7 @@ span {
   font-size: 20px;
 }
 .srch {
-  width: 30%;
+  width: 250;
   padding: 2px;
   display: flex;
   justify-content: center;
@@ -938,11 +953,11 @@ span {
   border-radius: 20px;
 }
 .srch img {
-  width: 25px;
+  width: 33px;
   cursor: pointer;
 }
 .srch .search {
-  padding: 2px 10px;
+  padding: 2px ;
   outline: none;
   border: none;
   background: transparent;
@@ -1053,4 +1068,25 @@ span {
 [data-invalid="true"]{
   border:1px solid red !important;
   color:red !important;
+}
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+	background: linear-gradient(to right, #fa4b37, #df2771);
+    border:1px solid red !important;
+	border-radius: 30px;
+	
+	color: white;
+	
+}
+
+input.btn{
+	color: white;
+	font-weight: 700;
+}
+a .nav-link{
+	color: #000;
+	font-weight: 600;
+	text-decoration: none;
+}
+a .nav-link .active{
+transition: 0.8s;
 }
