--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,28 +28,34 @@ html {
 
 /* Home Page */
 .head-container {
-  width: 90%;
-  margin: auto;
-  margin-bottom: 100px;
-  margin-top: 200px;
+  width: 100%;
 
+  height: 100vh;
+  margin-bottom: 100px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  border-radius: 10px;
+  justify-content: center;
+  box-shadow: inset 0 0 90px rgba(0, 0, 0, 0.6), 0 0 80px rgba(0, 0, 0, 0.2);
+  background: rgb(12, 29, 53,0.7);
+  
 }
 .quote {
-  width: 600px;
+  margin-top:200px;
+  margin-right: 40px;
+  width: 650px;
   transform: translateY(-50px);
 }
 .quote h5 {
-  margin-top: 20px;
-  color: #0009;
+  margin-top: 40px;
+  color:white;
   line-height: 20px;
 }
 .quote p {
   font-size: 50px;
-  color: #2e2e2e;
+  color:white
 }
 
 .svg-image img {
@@ -381,7 +387,7 @@ html {
   width: 380px;
   height: 550px;
   position: relative;
-  margin: 3% auto;
+  margin: 13% auto;
   background: #fff8;
   padding: 5px;
   border-radius: 5px;
@@ -1073,6 +1079,8 @@ span {
   border: 1px solid red !important;
   color: red !important;
 }
+
+
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   background: linear-gradient(to right, #fa4b37, #df2771);
@@ -1088,7 +1096,7 @@ input.btn {
 }
 a .nav-link {
   color: #000;
-  font-weight: 600;
+  font-weight: 900;
   text-decoration: none;
 }
 a .nav-link .active {
@@ -1125,3 +1133,23 @@ a .nav-link .active {
   color: #ffffff;
 }
 /* tag filter ends*/
+
+
+/* navbar */
+.nav-item{
+  padding:5px
+}
+.nav-item:hover{
+  background: rgb(12, 29, 53,0.2);;
+}
+.nav-item .nav-link{
+  font-size: 20px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  padding: 6px 13px;
+}
+.nav-item .active{
+  background:  linear-gradient(to right, #fa4b37, #df2771);
+  color: #ffffff;
+  border-radius: 10%;
+}
