--- a/client/src/App.css
+++ b/client/src/App.css
@@ -394,7 +394,9 @@ html {
   overflow: hidden;
   box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.4);
 }
-
+.bg-inherit{
+  background: inherit;
+}
 .button-box {
   width: 220px;
   margin: 35px auto;
