--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  overflow: auto;
+  overflow-x: hidden;
 }
 [data-required="true"]::after {
   content: " *";
@@ -480,7 +480,6 @@ label {
 
 .submit-btn {
   margin-top: 30px;
-  margin-left: 50px;
   padding: 5px 20px;
   border: 2px solid #df2771;
   text-decoration: none;
